[gd_scene load_steps=3 format=3 uid="uid://cc161rcmkto75"]

[ext_resource type="Script" path="res://scene/world/mobs/angry/angry.gd" id="1_572uf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f7i22"]
size = Vector2(40, 20)

[node name="angry" type="CharacterBody2D"]
position = Vector2(200, 200)
script = ExtResource("1_572uf")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -30.0
offset_right = 20.0
offset_bottom = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_f7i22")

[node name="shoot" type="Timer" parent="."]

[node name="aoe_shoot" type="Timer" parent="."]
one_shot = true

[node name="rotater" type="Node2D" parent="."]

[connection signal="timeout" from="shoot" to="." method="_on_shoot_timeout"]
[connection signal="timeout" from="aoe_shoot" to="." method="_on_aoe_shoot_timeout"]
